--- a/style.css
+++ b/style.css
@@ -238,6 +238,7 @@ padding: 10px 26px;
 }
 /*menu section styling*/
 .menu-section {
+  padding: 50px 0 100px;
   color: var(--white-color);
   background: var(--dark-color);
   
