--- a/style.css
+++ b/style.css
@@ -379,6 +379,8 @@ padding: 10px 26px;
   align-items: center;
   justify-content: space-between;
 }
+/* Responsive media allery code for max width 900px*/
+
 /* Responsive media allery code for max width 1024px*/
 @media screen and (max-width:1024px){
 .menu-section .menu-list{
