--- a/style.css
+++ b/style.css
@@ -399,6 +399,35 @@ padding: 10px 26px;
     margin-right:0;
   }
 }
+/* Responsive media allery code for max width 900px*/
+@media screen and (max-width:900px){
+  :root{
+  --font-size-m: 1rem;
+  --font-size-1: 1.3rem;
+  --font-size-x1: 1.5rem;
+  --font-size-xx1: 1.8rem;
+  }
+  .navbar .nav-menu{
+    display:block;
+    position:fixed;
+    left:o;
+    top:0;
+    width:300px;
+    height:100%;
+    display:flex;
+    align-items:center;
+    padding-top:100px;
+    background:var(--white-color);
+    transition:left 0.2s ease;
+}
+  .body .show-moblie-menu .navbar .nav-menu{
+    left:0;
+  }
+  .navbar .nav-menu .nav-link{
+    color:var(--dark-color);
+    display:block;
+    margin-top:17px;
+    font-size:var(--font-size-1);
 /* Responsive media allery code for max width 1024px*/
 @media screen and (max-width:1024px){
 .menu-section .menu-list{
