--- a/style.css
+++ b/style.css
@@ -379,26 +379,7 @@ padding: 10px 26px;
   align-items: center;
   justify-content: space-between;
 }
-/* Responsive media query code for max width 900px*/
-@media screen and (max-width:900px){
-  .hero-section .section-content{
-    gap:50px;
-    text-align:center;
-    padding:30px 20px 20px;
-    flex-direction:column-reverse;
-    justify-content:cneter;
-  }
-  .hero-section .hero-details:is (.subtitle, .description){
-    max-width:100%;
-  }
-  .hero-section .hero-details .buttons{
-    justify-content:center;
-  }
-  .hero-section .hero-image-wrapper{
-    max-width:270px;
-    margin-right:0;
-  }
-}
+
 /* Responsive media allery code for max width 900px*/
 @media screen and (max-width:900px){
   :root{
@@ -428,6 +409,52 @@ padding: 10px 26px;
     display:block;
     margin-top:17px;
     font-size:var(--font-size-1);
+  }
+   .hero-section .section-content{
+    gap:50px;
+    text-align:center;
+    padding:30px 20px 20px;
+    flex-direction:column-reverse;
+    justify-content:cneter;
+  }
+  .hero-section .hero-details:is (.subtitle, .description) .about-section .about-details{
+    max-width:100%;
+  }
+  .hero-section .hero-details .buttons{
+    justify-content:center;
+  }
+  .hero-section .hero-image-wrapper{
+    max-width:270px;
+    margin-right:0;
+  }
+  .about-section .section-contect{
+    gap:70px;
+    flex-direction:column-reverse;
+  }
+  .about-section .about-image-wrapper .about-image{
+    width:100%;
+    height:100%;
+    max-width:250;
+    aspect-ratio:1;
+  }
+  .menu-section .menu-list{
+    gap:30px;
+  }
+  .menu-section .menu-list .menu-item{
+    width:calc(100% / 2-30px);
+  }
+  .menu-section .menu-list .menu-item .menu-image{
+    max-width:200px;
+  }
+  .gallery-section .gallery-list{
+    gap:30px;
+  }
+  .gallery-section .gallery-list .gallery-item{
+    width:calc(100% /2 -30px);
+  }
+  .contact-section .section-contect{
+    align-items:center;
+    flex-direction:column-reverse;
   }
 }
 /* Responsive media allery code for max width 1024px*/
